--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,5 +13,15 @@
   "devDependencies": {
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
-  }
+  },
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ericksen-github/portfolio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ericksen-github/portfolio/issues"
+  },
+  "homepage": "https://github.com/ericksen-github/portfolio#readme",
+  "description": ""
 }
